# sqlx-pg-test-template

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
run-test/: Cargo.toml
run-test/src/: lib.rs
runner/: Cargo.toml
runner/src/: lib.rs
src/: lib.rs
tests/: Cargo.toml  macro_test.rs
tests/migrations/: 20240612125112_add_users.down.sql  20240612125112_add_users.up.sql
tests/src/: lib.rs
