[workspace]
members = ["run-test", "macros", "tests"]
resolver = "2"

[workspace.package]
authors = ["Viktor Sokolov"]
edition = "2021"
repository = "https://github.com/gzigzigzeo/sqlx-pg-test-template"
version = "0.1.0"

[workspace.dependencies]
macros = {path = "macros"}
run-test = {path = "run-test"}
sqlx = {version = ">= 0.8", features = ["migrate", "postgres", "runtime-tokio"]}
thiserror = "2"
tokio = {version = "1", features = ["full"]}

[package]
authors.workspace = true
edition.workspace = true
name = "sqlx-pg-test-template"
repository.workspace = true
version.workspace = true

[dependencies]
macros.workspace = true
run-test.workspace = true

[lib]
name = "sqlx_pg_test_template"
path = "src/lib.rs"
