[workspace]
members = ["run-test", "macros", "tests"]
resolver = "2"

[workspace.package]
authors = ["Viktor Sokolov"]
description = "Faster version of #[sqlx-test] macro for PostgreSQL"
edition = "2021"
homepage = "https://github.com/gzigzigzeo/sqlx-pg-test-template"
license = "MIT"
repository = "https://github.com/gzigzigzeo/sqlx-pg-test-template"
version = "0.1.0"

[workspace.dependencies]
macros = {version = "0.1.0", path = "./macros"}
proc-macro2 = {version = "1", default-features = false}
quote = "1"
run-test = {version = "0.1.0", path = "./run-test"}
sqlx = {version = ">= 0.8", features = ["postgres"], default-features = false}
syn = "2"
thiserror = "2"
tokio = {version = "1", features = ["full"]}

[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "sqlx-pg-test-template"
repository.workspace = true
version.workspace = true

[dependencies]
macros.workspace = true
run-test.workspace = true

[lib]
name = "sqlx_pg_test_template"
path = "src/lib.rs"
