[workspace]
members = ["runner", "macros", "tests"]
resolver = "2"

[workspace.package]
authors = ["Viktor Sokolov"]
description = "Faster version of #[sqlx-test] macro for PostgreSQL"
edition = "2021"
homepage = "https://github.com/gzigzigzeo/sqlx-pg-test-template"
license = "MIT"
repository = "https://github.com/gzigzigzeo/sqlx-pg-test-template"
version = "0.1.0"

[workspace.dependencies]
proc-macro2 = {version = "1", default-features = false}
quote = "1"
sqlx = {version = ">= 0.8", features = ["postgres"], default-features = false}
sqlx-pg-test-template-macros = {version = "0.1.0", path = "./macros"}
sqlx-pg-test-template-runner = {version = "0.1.0", path = "./runner"}
syn = "2"
thiserror = "2"

[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "sqlx-pg-test-template"
repository.workspace = true
version.workspace = true

[dependencies]
sqlx-pg-test-template-macros.workspace = true
sqlx-pg-test-template-runner.workspace = true

[lib]
name = "sqlx_pg_test_template"
path = "src/lib.rs"
