[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "sqlx-pg-test-template-macros"
repository.workspace = true
version.workspace = true

[dependencies]
proc-macro2 = {workspace = true, default-features = false}
quote.workspace = true
syn = {workspace = true, features = ["full"]}

[lib]
proc-macro = true
