[package]
authors.workspace = true
edition.workspace = true
name = "tests"
repository.workspace = true
version.workspace = true

[dev-dependencies]
sqlx = {version = ">= 0.8", features = ["migrate", "postgres", "runtime-tokio"]}
sqlx-pg-test-template = {path = ".."}
tokio = {version = "1", features = ["full"]}
